fixing overflow and navigation animation

--- a/main.css
+++ b/main.css
@@ -5,10 +5,13 @@
 }
 
 html, body {
-  overflow-x: hidden;
+  
   font-size: 16px;
   height: 100%;
   scroll-behavior: smooth;
+}
+body {
+  overflow-x: hidden;
 }
 
 :root {
